Fix: Also make has-popup-menu keep vertical-tabs visible, remove window dragging from vertical tabs, compact mode as it causes some weird behavior

--- a/src/browser/base/content/zen-styles/zen-compact-mode.css
+++ b/src/browser/base/content/zen-styles/zen-compact-mode.css
@@ -46,6 +46,7 @@
     &,
     & #titlebar {
       min-width: var(--zen-toolbox-min-width) !important;
+      -moz-window-dragging: no-drag;
     }
   }
 
